# grpc-python-example

./: api.py  main.py  pyproject.toml
protos/: helloworld.proto  helloworld_pb2_grpc.py
