[tool.poetry]
name = "grpc-python-example"
version = "0.1.0"
description = ""
authors = ["heumsi <heumsi@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.42.0"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.42.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
